--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# Compiled class file
-*.class
+*target*
+*.versionsBackup
+.project
+.classpath
+bin
+.settings
 
-# Log file
-*.log
+**/.DS_Store
+**/*.versionsBackup
+**/.project
+**/.classpath
+**/bin
+**/.settings
+**/*.log
+**/*.log.*
 
-# BlueJ files
-*.ctxt
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### AWS-SAM ###
+.aws-sam
+.localstack
